--- a/src/Styles/Colors.scss
+++ b/src/Styles/Colors.scss
@@ -1,3 +1,9 @@
 $body-foreground: white;
-$body-background: #172C3D;
-$table-border: white
+$body-background: #0b273f;
+$table-background: #0e3f68;
+$table-border: white;
+$ask-header-foreground: rgb(17, 242, 17);
+$bid-header-foreground: rgb(255, 20, 20);
+$row-text: white;
+$ask-bar-background: rgb(25, 104, 25);
+$bid-bar-background: rgb(107, 12, 12);
